    * Enchantments module:
        - Add enchantment "Area" that makes tools dig multiple blocks at the same time.
    * Redstone module:
        - Add assembler block that can automatically craft recipes.
    * Industry module:
        - Add copper and tin ore.
        - Add copper and tin ingots.
        - Add copper, tin and iron nuggets.
        - Add copper and tin blocks.
        - Remove furnace recipes for smelting iron and gold ore.