@@ -10,6 +10,7 @@ import com.google.common.collect.Sets;
 import org.apache.commons.lang3.tuple.Pair;
 
 import net.minecraft.block.Block;
+import net.minecraft.init.Blocks;
 import net.minecraft.init.Items;
 import net.minecraft.item.ItemStack;
 import net.minecraft.item.crafting.FurnaceRecipes;
@@ -19,12 +20,17 @@ import net.minecraftforge.fml.common.network.IGuiHandler;
 
 import com.hea3ven.dulcedeleche.enchantments.enchantment.EnchantmentArea;
 import com.hea3ven.dulcedeleche.industry.block.BlockMetalBlock;
+import com.hea3ven.dulcedeleche.industry.block.BlockMetalFurnace;
 import com.hea3ven.dulcedeleche.industry.block.BlockMetalOre;
+import com.hea3ven.dulcedeleche.industry.block.tileentity.TileMetalFurnace;
+import com.hea3ven.dulcedeleche.industry.client.GuiHandlerIndustry;
+import com.hea3ven.dulcedeleche.industry.crafting.MetalFurnaceRecipes;
 import com.hea3ven.dulcedeleche.industry.item.ItemMetal;
 import com.hea3ven.dulcedeleche.industry.item.ItemMetalBlock;
+import com.hea3ven.dulcedeleche.industry.metal.Metal;
 import com.hea3ven.dulcedeleche.redstone.block.BlockAssembler;
 import com.hea3ven.dulcedeleche.redstone.block.tileentity.TileAssembler;
-import com.hea3ven.dulcedeleche.redstone.client.GuiHandler;
+import com.hea3ven.dulcedeleche.redstone.client.GuiHandlerRedstone;
 import com.hea3ven.tools.commonutils.mod.InfoBlock;
 import com.hea3ven.tools.commonutils.mod.InfoItem;
 import com.hea3ven.tools.commonutils.mod.InfoTileEntity;
@@ -34,10 +40,11 @@ import com.hea3ven.tools.commonutils.mod.ProxyModBase;
 public class ProxyCommonDulceDeLeche extends ProxyModBase {
 
 	private Block assembler;
-	private Block ore;
+	private BlockMetalOre ore;
 	private Block metalBlock;
 	private ItemMetal nugget;
 	private ItemMetal ingot;
+	private BlockMetalFurnace metalFurnace;
 
 	public ProxyCommonDulceDeLeche(ModInitializerCommon modInitializer) {
 		super(modInitializer);
@@ -45,7 +52,7 @@ public class ProxyCommonDulceDeLeche extends ProxyModBase {
 				.setUnlocalizedName("assembler")
 				.setHardness(3.5F)
 				.setStepSound(Block.soundTypePiston);
-		ore = new BlockMetalOre()
+		ore = (BlockMetalOre) new BlockMetalOre()
 				.setUnlocalizedName("ore")
 				.setHardness(3.0F)
 				.setResistance(5.0F)
@@ -57,6 +64,10 @@ public class ProxyCommonDulceDeLeche extends ProxyModBase {
 				.setStepSound(Block.soundTypeMetal);
 		nugget = (ItemMetal) new ItemMetal(ItemMetal.NUGGETS).setUnlocalizedName("nugget");
 		ingot = (ItemMetal) new ItemMetal(ItemMetal.INGOTS).setUnlocalizedName("ingot");
+		metalFurnace = (BlockMetalFurnace) new BlockMetalFurnace()
+				.setUnlocalizedName("metalFurnace")
+				.setHardness(3.5F)
+				.setStepSound(Block.soundTypeMetal);
 	}
 
 	@Override
@@ -70,12 +81,14 @@ public class ProxyCommonDulceDeLeche extends ProxyModBase {
 				new InfoBlock(ore, "dulcedeleche", "ore", ItemMetalBlock.class,
 						new Object[] {BlockMetalOre.ORES}),
 				new InfoBlock(metalBlock, "dulcedeleche", "block_metal", ItemMetalBlock.class,
-						new Object[] {BlockMetalBlock.BLOCKS}));
+						new Object[] {BlockMetalBlock.BLOCKS}),
+				new InfoBlock(metalFurnace, "dulcedeleche", "metal_furnace"));
 	}
 
 	@Override
 	public List<InfoTileEntity> getTileEntities() {
-		return Lists.newArrayList(new InfoTileEntity(TileAssembler.class, "assembler"));
+		return Lists.newArrayList(new InfoTileEntity(TileAssembler.class, "assembler"),
+				new InfoTileEntity(TileMetalFurnace.class, "metal_furnace"));
 	}
 
 	@Override
@@ -86,7 +99,9 @@ public class ProxyCommonDulceDeLeche extends ProxyModBase {
 
 	@Override
 	public List<Pair<String, IGuiHandler>> getGuiHandlers() {
-		return Lists.newArrayList(Pair.of(ModDulceDeLeche.MODID, (IGuiHandler) new GuiHandler()));
+		return Lists.newArrayList(
+				Pair.of(ModDulceDeLeche.MODID, (IGuiHandler) new GuiHandlerRedstone()),
+				Pair.of(ModDulceDeLeche.MODID, (IGuiHandler) new GuiHandlerIndustry()));
 	}
 
 	@Override
@@ -94,6 +109,18 @@ public class ProxyCommonDulceDeLeche extends ProxyModBase {
 		super.onPostInitEvent();
 
 		removeIngotSmeltingRecipes();
+		MetalFurnaceRecipes.instance().addRecipe(new ItemStack(Blocks.iron_ore),
+				new ItemStack(nugget, 1, nugget.getMetaForMetal(Metal.IRON)));
+		MetalFurnaceRecipes.instance().addRecipe(
+				new ItemStack(ore, 1, ore.getMetaForMetal(Metal.COPPER)),
+				new ItemStack(nugget, 1, nugget.getMetaForMetal(Metal.COPPER)));
+		MetalFurnaceRecipes.instance().addRecipe(
+				new ItemStack(ore, 1, ore.getMetaForMetal(Metal.TIN)),
+				new ItemStack(nugget, 1, nugget.getMetaForMetal(Metal.TIN)));
+		MetalFurnaceRecipes.instance().addRecipe(
+				new ItemStack(ore, 1, ore.getMetaForMetal(Metal.COPPER)),
+				new ItemStack(ore, 1, ore.getMetaForMetal(Metal.TIN)),
+				new ItemStack(Items.gold_nugget));
 	}
 
 	private void registerEnchantmentArea() {
