@@ -8,3 +8,4 @@
         - Add copper, tin and iron nuggets.
         - Add copper and tin blocks.
         - Remove furnace recipes for smelting iron and gold ore.
+        - Add metal furnace to smelt metals.
